seaqt/QtWidgets/gen_qlabel.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLabel QLabel;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QMovie QMovie;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPicture QPicture;
typedef struct QPixmap QPixmap;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QLabel* QLabel_new(QWidget* parent);
QLabel* QLabel_new2();
QLabel* QLabel_new3(struct miqt_string text);
QLabel* QLabel_new4(QWidget* parent, int f);
QLabel* QLabel_new5(struct miqt_string text, QWidget* parent);
QLabel* QLabel_new6(struct miqt_string text, QWidget* parent, int f);
QMetaObject* QLabel_metaObject(const QLabel* self);
void* QLabel_metacast(QLabel* self, const char* param1);
int QLabel_metacall(QLabel* self, int param1, int param2, void** param3);
struct miqt_string QLabel_tr(const char* s);
struct miqt_string QLabel_text(const QLabel* self);
QPixmap* QLabel_pixmap(const QLabel* self, int param1);
QPixmap* QLabel_pixmap2(const QLabel* self);
QPicture* QLabel_picture(const QLabel* self, int param1);
QPicture* QLabel_picture2(const QLabel* self);
QMovie* QLabel_movie(const QLabel* self);
int QLabel_textFormat(const QLabel* self);
void QLabel_setTextFormat(QLabel* self, int textFormat);
int QLabel_alignment(const QLabel* self);
void QLabel_setAlignment(QLabel* self, int alignment);
void QLabel_setWordWrap(QLabel* self, bool on);
bool QLabel_wordWrap(const QLabel* self);
int QLabel_indent(const QLabel* self);
void QLabel_setIndent(QLabel* self, int indent);
int QLabel_margin(const QLabel* self);
void QLabel_setMargin(QLabel* self, int margin);
bool QLabel_hasScaledContents(const QLabel* self);
void QLabel_setScaledContents(QLabel* self, bool scaledContents);
QSize* QLabel_sizeHint(const QLabel* self);
QSize* QLabel_minimumSizeHint(const QLabel* self);
void QLabel_setBuddy(QLabel* self, QWidget* buddy);
QWidget* QLabel_buddy(const QLabel* self);
int QLabel_heightForWidth(const QLabel* self, int param1);
bool QLabel_openExternalLinks(const QLabel* self);
void QLabel_setOpenExternalLinks(QLabel* self, bool open);
void QLabel_setTextInteractionFlags(QLabel* self, int flags);
int QLabel_textInteractionFlags(const QLabel* self);
void QLabel_setSelection(QLabel* self, int param1, int param2);
bool QLabel_hasSelectedText(const QLabel* self);
struct miqt_string QLabel_selectedText(const QLabel* self);
int QLabel_selectionStart(const QLabel* self);
void QLabel_setText(QLabel* self, struct miqt_string text);
void QLabel_setPixmap(QLabel* self, QPixmap* pixmap);
void QLabel_setPicture(QLabel* self, QPicture* picture);
void QLabel_setMovie(QLabel* self, QMovie* movie);
void QLabel_setNum(QLabel* self, int num);
void QLabel_setNumWithNum(QLabel* self, double num);
void QLabel_clear(QLabel* self);
void QLabel_linkActivated(QLabel* self, struct miqt_string link);
void QLabel_connect_linkActivated(QLabel* self, intptr_t slot);
void QLabel_linkHovered(QLabel* self, struct miqt_string link);
void QLabel_connect_linkHovered(QLabel* self, intptr_t slot);
struct miqt_string QLabel_tr2(const char* s, const char* c);
struct miqt_string QLabel_tr3(const char* s, const char* c, int n);
bool QLabel_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QLabel_virtualbase_metaObject(const void* self);
bool QLabel_override_virtual_metacast(void* self, intptr_t slot);
void* QLabel_virtualbase_metacast(void* self, const char* param1);
bool QLabel_override_virtual_metacall(void* self, intptr_t slot);
int QLabel_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QLabel_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QLabel_virtualbase_sizeHint(const void* self);
bool QLabel_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QLabel_virtualbase_minimumSizeHint(const void* self);
bool QLabel_override_virtual_heightForWidth(void* self, intptr_t slot);
int QLabel_virtualbase_heightForWidth(const void* self, int param1);
bool QLabel_override_virtual_event(void* self, intptr_t slot);
bool QLabel_virtualbase_event(void* self, QEvent* e);
bool QLabel_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QLabel_virtualbase_keyPressEvent(void* self, QKeyEvent* ev);
bool QLabel_override_virtual_paintEvent(void* self, intptr_t slot);
void QLabel_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QLabel_override_virtual_changeEvent(void* self, intptr_t slot);
void QLabel_virtualbase_changeEvent(void* self, QEvent* param1);
bool QLabel_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QLabel_virtualbase_mousePressEvent(void* self, QMouseEvent* ev);
bool QLabel_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QLabel_virtualbase_mouseMoveEvent(void* self, QMouseEvent* ev);
bool QLabel_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QLabel_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* ev);
bool QLabel_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QLabel_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* ev);
bool QLabel_override_virtual_focusInEvent(void* self, intptr_t slot);
void QLabel_virtualbase_focusInEvent(void* self, QFocusEvent* ev);
bool QLabel_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QLabel_virtualbase_focusOutEvent(void* self, QFocusEvent* ev);
bool QLabel_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QLabel_virtualbase_focusNextPrevChild(void* self, bool next);
bool QLabel_override_virtual_initStyleOption(void* self, intptr_t slot);
void QLabel_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QLabel_override_virtual_devType(void* self, intptr_t slot);
int QLabel_virtualbase_devType(const void* self);
bool QLabel_override_virtual_setVisible(void* self, intptr_t slot);
void QLabel_virtualbase_setVisible(void* self, bool visible);
bool QLabel_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QLabel_virtualbase_hasHeightForWidth(const void* self);
bool QLabel_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QLabel_virtualbase_paintEngine(const void* self);
bool QLabel_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QLabel_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QLabel_override_virtual_wheelEvent(void* self, intptr_t slot);
void QLabel_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QLabel_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QLabel_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QLabel_override_virtual_enterEvent(void* self, intptr_t slot);
void QLabel_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QLabel_override_virtual_leaveEvent(void* self, intptr_t slot);
void QLabel_virtualbase_leaveEvent(void* self, QEvent* event);
bool QLabel_override_virtual_moveEvent(void* self, intptr_t slot);
void QLabel_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QLabel_override_virtual_resizeEvent(void* self, intptr_t slot);
void QLabel_virtualbase_resizeEvent(void* self, QResizeEvent* event);