seaqt/QtWidgets/gen_qlabel.nim


proc fcQLabel_new(parent: pointer): ptr cQLabel {.importc: "QLabel_new".}
proc fcQLabel_new2(): ptr cQLabel {.importc: "QLabel_new2".}
proc fcQLabel_new3(text: struct_miqt_string): ptr cQLabel {.importc: "QLabel_new3".}
proc fcQLabel_new4(parent: pointer, f: cint): ptr cQLabel {.importc: "QLabel_new4".}
proc fcQLabel_new5(text: struct_miqt_string, parent: pointer): ptr cQLabel {.importc: "QLabel_new5".}
proc fcQLabel_new6(text: struct_miqt_string, parent: pointer, f: cint): ptr cQLabel {.importc: "QLabel_new6".}
proc fcQLabel_metaObject(self: pointer, ): pointer {.importc: "QLabel_metaObject".}
proc fcQLabel_metacast(self: pointer, param1: cstring): pointer {.importc: "QLabel_metacast".}
proc fcQLabel_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QLabel_metacall".}
proc fcQLabel_tr(s: cstring): struct_miqt_string {.importc: "QLabel_tr".}
proc fcQLabel_text(self: pointer, ): struct_miqt_string {.importc: "QLabel_text".}
proc fcQLabel_pixmap(self: pointer, param1: cint): pointer {.importc: "QLabel_pixmap".}
proc fcQLabel_pixmap2(self: pointer, ): pointer {.importc: "QLabel_pixmap2".}
proc fcQLabel_picture(self: pointer, param1: cint): pointer {.importc: "QLabel_picture".}
proc fcQLabel_picture2(self: pointer, ): pointer {.importc: "QLabel_picture2".}
proc fcQLabel_movie(self: pointer, ): pointer {.importc: "QLabel_movie".}
proc fcQLabel_textFormat(self: pointer, ): cint {.importc: "QLabel_textFormat".}
proc fcQLabel_setTextFormat(self: pointer, textFormat: cint): void {.importc: "QLabel_setTextFormat".}
proc fcQLabel_alignment(self: pointer, ): cint {.importc: "QLabel_alignment".}
proc fcQLabel_setAlignment(self: pointer, alignment: cint): void {.importc: "QLabel_setAlignment".}
proc fcQLabel_setWordWrap(self: pointer, on: bool): void {.importc: "QLabel_setWordWrap".}
proc fcQLabel_wordWrap(self: pointer, ): bool {.importc: "QLabel_wordWrap".}
proc fcQLabel_indent(self: pointer, ): cint {.importc: "QLabel_indent".}
proc fcQLabel_setIndent(self: pointer, indent: cint): void {.importc: "QLabel_setIndent".}
proc fcQLabel_margin(self: pointer, ): cint {.importc: "QLabel_margin".}
proc fcQLabel_setMargin(self: pointer, margin: cint): void {.importc: "QLabel_setMargin".}
proc fcQLabel_hasScaledContents(self: pointer, ): bool {.importc: "QLabel_hasScaledContents".}
proc fcQLabel_setScaledContents(self: pointer, scaledContents: bool): void {.importc: "QLabel_setScaledContents".}
proc fcQLabel_sizeHint(self: pointer, ): pointer {.importc: "QLabel_sizeHint".}
proc fcQLabel_minimumSizeHint(self: pointer, ): pointer {.importc: "QLabel_minimumSizeHint".}
proc fcQLabel_setBuddy(self: pointer, buddy: pointer): void {.importc: "QLabel_setBuddy".}
proc fcQLabel_buddy(self: pointer, ): pointer {.importc: "QLabel_buddy".}
proc fcQLabel_heightForWidth(self: pointer, param1: cint): cint {.importc: "QLabel_heightForWidth".}
proc fcQLabel_openExternalLinks(self: pointer, ): bool {.importc: "QLabel_openExternalLinks".}
proc fcQLabel_setOpenExternalLinks(self: pointer, open: bool): void {.importc: "QLabel_setOpenExternalLinks".}
proc fcQLabel_setTextInteractionFlags(self: pointer, flags: cint): void {.importc: "QLabel_setTextInteractionFlags".}
proc fcQLabel_textInteractionFlags(self: pointer, ): cint {.importc: "QLabel_textInteractionFlags".}
proc fcQLabel_setSelection(self: pointer, param1: cint, param2: cint): void {.importc: "QLabel_setSelection".}
proc fcQLabel_hasSelectedText(self: pointer, ): bool {.importc: "QLabel_hasSelectedText".}
proc fcQLabel_selectedText(self: pointer, ): struct_miqt_string {.importc: "QLabel_selectedText".}
proc fcQLabel_selectionStart(self: pointer, ): cint {.importc: "QLabel_selectionStart".}
proc fcQLabel_setText(self: pointer, text: struct_miqt_string): void {.importc: "QLabel_setText".}
proc fcQLabel_setPixmap(self: pointer, pixmap: pointer): void {.importc: "QLabel_setPixmap".}
proc fcQLabel_setPicture(self: pointer, picture: pointer): void {.importc: "QLabel_setPicture".}
proc fcQLabel_setMovie(self: pointer, movie: pointer): void {.importc: "QLabel_setMovie".}
proc fcQLabel_setNum(self: pointer, num: cint): void {.importc: "QLabel_setNum".}
proc fcQLabel_setNumWithNum(self: pointer, num: float64): void {.importc: "QLabel_setNumWithNum".}
proc fcQLabel_clear(self: pointer, ): void {.importc: "QLabel_clear".}
proc fcQLabel_linkActivated(self: pointer, link: struct_miqt_string): void {.importc: "QLabel_linkActivated".}
proc fcQLabel_connect_linkActivated(self: pointer, slot: int) {.importc: "QLabel_connect_linkActivated".}
proc fcQLabel_linkHovered(self: pointer, link: struct_miqt_string): void {.importc: "QLabel_linkHovered".}
proc fcQLabel_connect_linkHovered(self: pointer, slot: int) {.importc: "QLabel_connect_linkHovered".}
proc fcQLabel_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QLabel_tr2".}
proc fcQLabel_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QLabel_tr3".}
proc fQLabel_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QLabel_virtualbase_metaObject".}
proc fcQLabel_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QLabel_override_virtual_metaObject".}
proc fQLabel_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QLabel_virtualbase_metacast".}
proc fcQLabel_override_virtual_metacast(self: pointer, slot: int) {.importc: "QLabel_override_virtual_metacast".}
proc fQLabel_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QLabel_virtualbase_metacall".}
proc fcQLabel_override_virtual_metacall(self: pointer, slot: int) {.importc: "QLabel_override_virtual_metacall".}
proc fQLabel_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QLabel_virtualbase_sizeHint".}
proc fcQLabel_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QLabel_override_virtual_sizeHint".}
proc fQLabel_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QLabel_virtualbase_minimumSizeHint".}
proc fcQLabel_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QLabel_override_virtual_minimumSizeHint".}
proc fQLabel_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QLabel_virtualbase_heightForWidth".}
proc fcQLabel_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QLabel_override_virtual_heightForWidth".}
proc fQLabel_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QLabel_virtualbase_event".}
proc fcQLabel_override_virtual_event(self: pointer, slot: int) {.importc: "QLabel_override_virtual_event".}
proc fQLabel_virtualbase_keyPressEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_keyPressEvent".}
proc fcQLabel_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_keyPressEvent".}
proc fQLabel_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QLabel_virtualbase_paintEvent".}
proc fcQLabel_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_paintEvent".}
proc fQLabel_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QLabel_virtualbase_changeEvent".}
proc fcQLabel_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_changeEvent".}
proc fQLabel_virtualbase_mousePressEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_mousePressEvent".}
proc fcQLabel_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_mousePressEvent".}
proc fQLabel_virtualbase_mouseMoveEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_mouseMoveEvent".}
proc fcQLabel_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_mouseMoveEvent".}
proc fQLabel_virtualbase_mouseReleaseEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_mouseReleaseEvent".}
proc fcQLabel_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_mouseReleaseEvent".}
proc fQLabel_virtualbase_contextMenuEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_contextMenuEvent".}
proc fcQLabel_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_contextMenuEvent".}
proc fQLabel_virtualbase_focusInEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_focusInEvent".}
proc fcQLabel_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_focusInEvent".}
proc fQLabel_virtualbase_focusOutEvent(self: pointer, ev: pointer): void{.importc: "QLabel_virtualbase_focusOutEvent".}
proc fcQLabel_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_focusOutEvent".}
proc fQLabel_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QLabel_virtualbase_focusNextPrevChild".}
proc fcQLabel_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QLabel_override_virtual_focusNextPrevChild".}
proc fQLabel_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QLabel_virtualbase_initStyleOption".}
proc fcQLabel_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QLabel_override_virtual_initStyleOption".}
proc fQLabel_virtualbase_devType(self: pointer, ): cint{.importc: "QLabel_virtualbase_devType".}
proc fcQLabel_override_virtual_devType(self: pointer, slot: int) {.importc: "QLabel_override_virtual_devType".}
proc fQLabel_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QLabel_virtualbase_setVisible".}
proc fcQLabel_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QLabel_override_virtual_setVisible".}
proc fQLabel_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QLabel_virtualbase_hasHeightForWidth".}
proc fcQLabel_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QLabel_override_virtual_hasHeightForWidth".}
proc fQLabel_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QLabel_virtualbase_paintEngine".}
proc fcQLabel_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QLabel_override_virtual_paintEngine".}
proc fQLabel_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_mouseDoubleClickEvent".}
proc fcQLabel_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_mouseDoubleClickEvent".}
proc fQLabel_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_wheelEvent".}
proc fcQLabel_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_wheelEvent".}
proc fQLabel_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_keyReleaseEvent".}
proc fcQLabel_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_keyReleaseEvent".}
proc fQLabel_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_enterEvent".}
proc fcQLabel_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_enterEvent".}
proc fQLabel_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_leaveEvent".}
proc fcQLabel_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_leaveEvent".}
proc fQLabel_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_moveEvent".}
proc fcQLabel_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_moveEvent".}
proc fQLabel_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QLabel_virtualbase_resizeEvent".}
proc fcQLabel_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QLabel_override_virtual_resizeEvent".}
